--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/IronAccessControlEvent
+/IronAccessControlEvent/bin/Debug/netcoreapp2.2
+/IronAccessControlEvent/obj
